Added SliderPosts Components

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,7 @@ img {
 .alice-carousel__stage-item span {
    line-height: 0;
 }
+
+/* #sliderPosts .alice-carousel__stage-item {
+   width: fit-content !important;
+} */
